--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -5,7 +5,9 @@ import ThemeButton from "./ThemeButton.astro";
 import NavContent from "./NavContent.jsx";
 ---
 
-<div class="flex">
+<div
+  class="flex fixed w-full z-50 backdrop-blur-md border-[#ffefd2] border-b-2"
+>
   <NavContent client:load>
     <ThemeButton />
   </NavContent>
