--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,7 +6,7 @@ import NavContent from "./NavContent.jsx";
 ---
 
 <div
-  class="flex fixed w-full z-50 backdrop-blur-md border-[#ffefd2] border-b-2"
+  class="flex sticky w-full z-50 backdrop-blur-md border-[#ffefd2] border-b-2"
 >
   <NavContent client:load>
     <ThemeButton />
