--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,11 +13,14 @@ Astro.response.headers.set(
 );
 ---
 
-<html lang="en" class="bg-gradient-to-br from-background to-background2">
+<html
+  lang="en"
+  class="bg-gradient-to-br from-background to-background2 absolute w-full"
+>
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="initial-scale=1.0, width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
 
