--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -5,7 +5,7 @@ import ThemeButton from "./ThemeButton.astro";
 import NavContent from "./NavContent.jsx";
 ---
 
-<div class="flex fixed w-full z-50 backdrop-blur-md">
+<div class="flex sticky top-0 w-full z-50 backdrop-blur-md">
   <NavContent client:load>
     <ThemeButton />
   </NavContent>
