--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -213,7 +213,7 @@ const recommendations = [
   </div>
 
   <!-- Rocket -->
-  <div
+  <!-- <div
     class="rocket aspect-square fixed cursor-pointer -top-28 right-10 text-4xl
       before:opacity-0
       before:absolute before:top-0 before:left-0 before:bottom-0 before:right-0
@@ -228,7 +228,7 @@ const recommendations = [
     id="rocket"
   >
     <span class="block -rotate-45"> 🚀 </span>
-  </div>
+  </div> -->
 </Layout>
 <script>
   //onclick function
@@ -245,26 +245,26 @@ const recommendations = [
 <script is:inline>
   const isMobile = window.matchMedia("(max-width: 640px)").matches;
 
-  gsap.fromTo(
-    "#rocket",
-    {
-      scale: 0.1,
-    },
-    {
-      y: "100vh",
-      scale: 1,
-      duration: 0.5,
-      ease: "back.out(1)",
-      //When the top of the viewport reaches the bottom of #section1, trigger the animation
-      scrollTrigger: {
-        // scroller: "main",
-        trigger: "#section2",
-        start: "top center",
-        toggleActions: "play play reverse reverse",
-        // fastScrollEnd: 3000,
-      },
-    }
-  );
+  // gsap.fromTo(
+  //   "#rocket",
+  //   {
+  //     scale: 0.1,
+  //   },
+  //   {
+  //     y: "100vh",
+  //     scale: 1,
+  //     duration: 0.5,
+  //     ease: "back.out(1)",
+  //     //When the top of the viewport reaches the bottom of #section1, trigger the animation
+  //     scrollTrigger: {
+  //       // scroller: "main",
+  //       trigger: "#section2",
+  //       start: "top center",
+  //       toggleActions: "play play reverse reverse",
+  //       // fastScrollEnd: 3000,
+  //     },
+  //   }
+  // );
 
   const name = document.querySelector("#name");
 
@@ -289,6 +289,7 @@ const recommendations = [
     "--shadow": "0px -20px 20px 0px rgba(255, 250, 233, 0.9)",
   });
 
+  /*
   const rocket = document.querySelector("#rocket");
   if (rocket) {
     rocket.addEventListener("click", () => {
@@ -299,4 +300,5 @@ const recommendations = [
       });
     });
   }
+     */
 </script>
