--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ Astro.response.headers.set(
 
 <html
   lang="en"
-  class="bg-gradient-to-br from-background to-background2 absolute w-full"
+  class="bg-gradient-to-br from-background to-background2 absolute w-full overflow-x-hidden"
 >
   <head>
     <meta charset="UTF-8" />
