--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ const recommendations = [
   >
     <div
       id="sun"
-      class="sun w-[60%] aspect-square rounded-full dark:shadow-eclipse shadow-lightEclipse absolute -z-10"
+      class="sun w-[60%] aspect-square rounded-full dark:shadow-eclipse shadow-lightEclipse absolute"
     >
     </div>
     <h1 class="text-accent text-[11vw] sm:text-5xl md:text-8xl font-bold z-10">
@@ -205,7 +205,7 @@ const recommendations = [
         </Button>
       </div>
 
-      <p class="text-md text-text">
+      <p class="text-xl md:text-2xl text-text">
         Send me an email with your project details and let's find a way to
         collaborate!
       </p>
