--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,10 +24,10 @@ Astro.response.headers.set(
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
 
-    <meta
+    <!-- <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; style-src 'self' 'unsafe-inline';script-src 'self' https://cdn.jsdelivr.net;"
-    />
+      content="default-src 'self'; style-src 'self' 'unsafe-inline';script-src 'self' https://cdn.jsdelivr.net; img-src 'self'"
+    /> -->
 
     <script
       is:inline
