--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,9 +31,9 @@ Astro.response.headers.set(
         style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.sanity.io ;
         script-src 'self' https://cdn.sanity.io https://cdn.jsdelivr.net 'unsafe-inline' https://cdn.vercel-insights.com;
         img-src 'self' https://cdn.sanity.io;
-        frame-ancestors 'self' https://antoineando.com http://localhost;
-        frame-src 'self' https://antoineando.com http://localhost https://cdn.sanity.io;
-        child-src 'self' https://cdn.sanity.io 'unsafe-inline';
+        frame-src 'self' https://cdn.sanity.io;
+        child-src 'self' https://cdn.sanity.io;
+        connect-src 'self' https://cdn.sanity.io;
       "
     />
     <script
