--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,7 @@ Astro.response.headers.set(
         style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.sanity.io ;
         script-src 'self' https://cdn.sanity.io https://cdn.jsdelivr.net 'unsafe-inline' https://cdn.vercel-insights.com;
         img-src 'self' https://cdn.sanity.io;
-        frame-src 'self' https://cdn.sanity.io;
+        frame-src 'self' https://cdn.sanity.io data:;
         child-src 'self' https://cdn.sanity.io;
         connect-src 'self' https://cdn.sanity.io;
       "
