--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,11 +29,11 @@ Astro.response.headers.set(
       content="
         default-src 'self';
         style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.sanity.io ;
-        script-src 'self' https://cdn.sanity.io https://cdn.jsdelivr.net 'unsafe-inline' https://cdn.vercel-insights.com;
+        script-src 'self' https://cdn.sanity.io https://cdn.jsdelivr.net 'unsafe-inline' https://cdn.vercel-insights.com https://kit.fontawesome.com;
         img-src 'self' https://cdn.sanity.io;
         frame-src 'self' https://cdn.sanity.io data:;
         child-src 'self' https://cdn.sanity.io;
-        connect-src 'self' https://cdn.sanity.io;
+        connect-src 'self' https://cdn.sanity.io https://ka-f.fontawesome.com;
       "
     />
     <script
