--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ Astro.response.headers.set(
       content="
         default-src 'self';
         style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.sanity.io ;
-        script-src 'self' https://cdn.sanity.io https://cdn.jsdelivr.net 'unsafe-inline' https://cdn.vercel-insights.com https://kit.fontawesome.com;
+        script-src 'self' https://cdn.sanity.io https://cdn.jsdelivr.net 'unsafe-inline' *vercel* https://kit.fontawesome.com;
         img-src 'self' https://cdn.sanity.io;
         frame-src 'self' https://cdn.sanity.io data:;
         child-src 'self' https://cdn.sanity.io;
