--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ Astro.response.headers.set(
       content="
         default-src 'self' https://ka-f.fontawesome.com https://cdn.sanity.io;
         style-src 'self' 'unsafe-inline' https://fonts.googleapis.com ;
-        script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline' https://cdn.vercel-insights.com https://kit.fontawesome.com;
+        script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline' https://cdn.vercel-insights.com https://kit.fontawesome.com https://vercel.live;
         frame-src 'self' data:;
       "
     />
