--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,9 +32,12 @@ Astro.response.headers.set(
       http-equiv="Content-Security-Policy"
       content="
         default-src 'self' https://ka-f.fontawesome.com https://cdn.sanity.io;
-        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com ;
+        style-src 'self' https://fonts.googleapis.com https://vercel.live 'unsafe-inline';
         script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline' https://cdn.vercel-insights.com https://kit.fontawesome.com https://vercel.live;
         frame-src 'self' data: https://vercel.live/;
+        connect-src https://vercel.live wss://ws-us3.pusher.com;
+        img-src https://vercel.live https://vercel.com data: blob:
+        font-src https://vercel.live https://assets.vercel.com;
       "
     />
     <script
