--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,9 +35,9 @@ Astro.response.headers.set(
         style-src 'self' https://fonts.googleapis.com https://vercel.live 'unsafe-inline';
         script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline' https://cdn.vercel-insights.com https://kit.fontawesome.com https://vercel.live;
         frame-src 'self' data: https://vercel.live/;
-        connect-src https://vercel.live wss://ws-us3.pusher.com;
-        img-src https://vercel.live https://vercel.com data: blob:
-        font-src https://vercel.live https://assets.vercel.com;
+        connect-src 'self' https://vercel.live wss://ws-us3.pusher.com;
+        img-src 'self' https://vercel.live https://vercel.com data: blob:
+        font-src 'self' https://vercel.live https://assets.vercel.com;
       "
     />
     <script
