--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,7 +36,7 @@ Astro.response.headers.set(
         script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline' https://cdn.vercel-insights.com https://kit.fontawesome.com https://vercel.live;
         frame-src 'self' data: https://vercel.live/;
         connect-src 'self' https://vercel.live wss://ws-us3.pusher.com;
-        img-src 'self' https://vercel.live https://vercel.com data: blob:
+        img-src 'self' https://vercel.live https://vercel.com data: blob: https://cdn.sanity.io;
         font-src 'self' https://vercel.live https://assets.vercel.com;
       "
     />
