--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ Astro.response.headers.set(
         style-src 'self' https://fonts.googleapis.com https://vercel.live 'unsafe-inline';
         script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline' https://cdn.vercel-insights.com https://kit.fontawesome.com https://vercel.live;
         frame-src 'self' data: https://vercel.live/;
-        connect-src 'self' https://vercel.live wss://ws-us3.pusher.com;
+        connect-src 'self' https://vercel.live wss://ws-us3.pusher.com https://cdn.sanity.io;
         img-src 'self' https://vercel.live https://vercel.com data: blob: https://cdn.sanity.io;
         font-src 'self' https://vercel.live https://assets.vercel.com;
       "
