Img object-fit changed

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -31,7 +31,7 @@ import ProjectCardComponent from "../../components/ProjectCardComponent";
                 <img
                   src={project.image.asset.url + "?h=200"}
                   alt="Flowers"
-                  class="h-[200px]"
+                  class="h-[200px] object-cover"
                 />
               </picture>
             </ProjectCardComponent>
