Github link + removed errors

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,6 +40,11 @@ Astro.response.headers.set(
         font-src 'self' https://vercel.live https://assets.vercel.com https://ka-f.fontawesome.com;
       "
     />
+
+    <script
+      is:inline
+      src="https://kit.fontawesome.com/7dbdbb6936.js"
+      crossorigin="anonymous"></script>
     <script
       is:inline
       src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
